# AgentSphereDesktop

./: .env.example  FEATURES.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json
.github/workflows/: tauri-desktop.yml
src/: App.tsx  main.tsx  theme.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-client-tools.toml
src-tauri/src/: api_security_checker_client.rs  browser_client.rs  builtin_browser.rs  cert_checker_client.rs  chrome_session.rs  cisco_ios_client.rs  cron_manager_client.rs  crypto_tool_client.rs  csv_analyzer_client.rs  datetime_client.rs  db_query_client.rs  dns_lookup_client.rs  docker_client.rs  ethereum_query.rs  file_parser_client.rs  git_client.rs  h3c_switch_client.rs  huawei_switch_client.rs  js_sandbox.rs  json_parser_client.rs  jwt_tool_client.rs  lib.rs  log_analyzer_client.rs  log_security_analyzer_client.rs  main.rs  network_tools_client.rs  nft_query.rs  nginx_diagnose_client.rs  password_strength_checker_client.rs  redis_tool_client.rs  regex_client.rs  secrets_scanner_client.rs  security_headers_checker_client.rs  smart_contract.rs  stubs_client.rs  system_monitor_client.rs  test_runner_client.rs  transaction_analyzer.rs  wasm_sandbox.rs
src/api/: agent.ts  approvals.ts  audit.ts  auth.ts  channels.ts  chat.ts  config.ts  dashboard.ts  schedules.ts  skills.ts  version.ts
src/components/: ClientToolIndicator.tsx  Layout.tsx  PlanExecuteTaskPanel.tsx  TypingIndicator.tsx  VersionCheck.tsx
(+32 files in other folders)
