[package]
name = "taskmate"
version = "0.1.0"
description = "TaskMate desktop (Tauri)"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "taskmate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
wasmtime = "25"
rquickjs = "0.11"
anyhow = "1"
headless_chrome = "1.0.21"
ureq = { version = "2", default-features = false, features = ["tls"] }
tauri-plugin-dialog = "2"
base64 = "0.22.1"
chrono = "0.4"
chrono-tz = "0.10"
regex = "1"
lazy_static = "1"
csv = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
native-tls = "0.2"
dns-lookup = "2"
sysinfo = "0.32"
toml = "0.8"
serde_yaml = "0.9"
num-bigint = "0.4"
num-traits = "0.2"
redis = "0.27"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
mysql = "24"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

